--- a/index.css
+++ b/index.css
@@ -1,5 +1,5 @@
 body{
-   color: white; background-color: black;
+   color: white; background-color: rgb(51, 49, 49);
    font-family: Arial, Helvetica, sans-serif;
 } 
 
@@ -33,4 +33,8 @@ nav a:hover{
 
 h1{
     text-align: center;
+} 
+
+.menu{
+    
 }
