--- a/meuproject.css
+++ b/meuproject.css
@@ -1,3 +1,34 @@
 body{
     color: white; background-color: rgb(51, 49, 49);
 }
+
+input[type=text] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box; 
+    border: 3px solid darkgrey;
+  } 
+
+  input[type=number] {
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box; 
+    border: 3px solid darkgrey;
+  }   
+
+  select{
+    width: 100%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    box-sizing: border-box; 
+    border: 3px solid darkgrey;
+    color: gray;
+  }  
+
+  form{
+    max-width: 600px;
+  }
+
+ 
